# rusty_platform

./: .directory  .gitignore  Cargo.toml  TODO.md
src/: game.rs  main.rs
src/ecs/: actions.rs  chunk.rs  components_prelude.rs  imgui_editor.rs  inputs.rs  level.rs  loading.rs  mod.rs  nk_editor.rs  physics.rs  rect.rs  render.rs  serialization.rs
src/scenes/: editor_scene.rs  editor_try_level_scene.rs  game_scene.rs  main_scene.rs  mod.rs
src/utils/: camera.rs  constants.rs  ggez.rs  imgui.rs  input_manager.rs  math.rs  mod.rs  resources_manager.rs  serde.rs  sprite.rs
src/wrapper/: imgui_wrapper.rs  mod.rs  nuklear_wrapper.rs
